Fix overflow and extra padding bugs in chrome.

--- a/client/layout/sidebar/style.scss
+++ b/client/layout/sidebar/style.scss
@@ -380,13 +380,12 @@ a.sidebar__button {
 }
 
 .sidebar__region {
-	ul {
-		display: flex;
-		flex-direction: column;
-	}
+	display: flex;
+	flex-direction: column;
 
 	@include breakpoint( ">660px" ) {
-		overflow: auto;
+		overflow-y: auto;
+		overflow-x: hidden;
 		flex: 1;
 		transform: translateX( 0 ); /* workaround for safari scrollbar rendering bug */
 	}
